@@ -138,7 +138,7 @@ class TestTabularFormatEngine < Test::Unit::TestCase
     assert_equal( [[1,2,3],[nil,2,4],[nil,3,7],
                    [2,1,9],[nil,2,3],[nil,2,9]], @engine.data)
 
-    data = DataSet.new %w[name date service amount]
+    data = Data::Table.new :column_names => %w[name date service amount]
     data << [ "Greg Gibson", "1/1/2000",  "Prophy",  "100.00" ] <<
             [ "Greg Gibson", "1/1/2000",  "Filling", "100.00" ] <<
             [ "Greg Gibson", "1/12/2000", "Prophy",  "100.00" ] <<
